tests/negative/parser/undefined.orng
// undefined.orng:7:22: error: expected an expression here, got `undefined`
//     let x = undefined
//                     ^
// 

fn main() -> Int {
    let x = undefined
    x = 343
    x
}